# webrtc_rnnvad

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cc
common_audio/: wav_header.h
common_audio/resampler/: sinc_resampler.cc
modules/audio_processing/agc2/rnn_vad/: common.cc
